# SurfPack

./: .gitignore  README.md  entropy.py  entropy_chain.py  main.py  main_new.py  paircorrelation.py  pcsaft.py  planar_ljs.py  planar_pets.py  polar.py  pyproject.toml  saftvrqmie.py  setup.py  spherical.py  spherical_new.py  spherical_pets.py  surf_tens_ljs.py
doc/: DFT.bib  HardSphere.bib  PC-SAFT.bib  cdft.tex  cdft_V2.tex  misc.bib
docs/: _config.yml  index.md  readme.md
examples/: octane.py  spherical_pets_single.py  tolman_pets.py
ljs/: T056.csv  T06.csv  T065.csv  T07.csv  planar_ljs_energy.py  planar_ljs_energy_all_isotherms.py  planar_ljs_energy_application.py
pyCDFT/: __init__.py  cdft.py  constants.py  convolver.py  dft_numerics.py  external_potential.py  fmt_functionals.py  geometry.py  geometry_solvers.py  grid.py  interface.py  ng_extrapolation.py  pcsaft_functional.py  utility.py  weight_function_system.py  weight_functions.py  weight_functions_cosine_sine.py  weight_functions_polar.py  weight_functions_sph.py
pyExamples/: adsorbtion.py  external_potential.py  radial_distribution_function.py  solver_setup.py  surface_tension.py  vle_interface.py
src/: __init__.py  bulk.py  cdft.py  constants.py  convolver.py  curvature_expansion.py  density_profile.py  dft_numerics.py  external_potential.py  fmt_functionals.py  geometry_solvers.py  grid.py  interface.py  ljs_functional.py  pair_correlation.py  pcsaft_functional.py  pets_functional.py  pore.py  saftvrmie_functional.py  surface_tension_diagram.py  utilities.py  utility.py  weight_functions.py  (+2 more)
(+81 files in other folders)
